finished integration with blockly

--- a/fol-blockly/src/index.html
+++ b/fol-blockly/src/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Blockly Sample App</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-network.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="pageContainer">
       <div id="outputPane">
-        <pre id="generatedCode"><code></code></pre>
-        <div id="output"></div>
+        <div id="networkbox"></div>
+        <ol id="levels-list"></ol>
       </div>
       <div id="blocklyDiv"></div>
     </div>
