--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div id="pageContainer">
       <div id="outputPane">
         <div id="networkbox"></div>
-        <ol id="levels-list"></ol>
+        <div id="levels-list"></div>
       </div>
       <div id="blocklyDiv"></div>
     </div>
